# HeifSharp

./: .gitattributes  .gitmodules  CMakeLists.txt  HeifSharp.sln
src/: CMakeLists.txt  cpp.hint
src/HeifNative/: CMakeLists.txt
src/HeifSharp.Common/: CustomAllocator.cs
src/HeifSharp.Wrapper/api-csharp/: .clang-format  AACDecoderConfiguration.cpp  AVCCodedImageItem.cpp  AVCDecoderConfiguration.cpp  AlternativeTrackGroup.cpp  AudioSample.cpp  AudioTrack.cpp  CMakeLists.txt  CodedImageItem.cpp  DecoderConfiguration.cpp  DerivedImageItem.cpp  EntityGroup.cpp  helpers.h
